@@ -29,7 +29,7 @@ from bzrlib import (
     upgrade,
     urlutils,
     )
-from bzrlib.tests import test_server
+from bzrlib.transport import memory
 
 
 class TestInfo(tests.TestCaseWithTransport):
@@ -39,7 +39,7 @@ class TestInfo(tests.TestCaseWithTransport):
         self._repo_strings = "2a"
 
     def test_info_non_existing(self):
-        self.vfs_transport_factory = test_server.MemoryServer
+        self.vfs_transport_factory = memory.MemoryServer
         location = self.get_url()
         out, err = self.run_bzr('info '+location, retcode=3)
         self.assertEqual(out, '')
