@@ -26,7 +26,7 @@ from bzrlib import (
     tests,
     )
 from bzrlib.bundle import serializer
-from bzrlib.tests import test_server
+from bzrlib.transport import memory
 
 
 def load_tests(standard_tests, module, loader):
@@ -281,7 +281,7 @@ class TestSend(tests.TestCaseWithTransport, TestSendMixin):
         self.assertEqual('rev3', md.revision_id)
 
     def test_nonexistant_branch(self):
-        self.vfs_transport_factory = test_server.MemoryServer
+        self.vfs_transport_factory = memory.MemoryServer
         location = self.get_url('absentdir/')
         out, err = self.run_bzr(["send", "--from", location], retcode=3)
         self.assertEqual(out, '')
