@@ -33,6 +33,7 @@ from bzrlib.tests import (
     per_repository,
     test_server,
     )
+from bzrlib.transport import memory
 
 
 class TestWriteGroup(per_repository.TestCaseWithRepository):
@@ -118,7 +119,7 @@ class TestWriteGroup(per_repository.TestCaseWithRepository):
     def test_abort_write_group_does_not_raise_when_suppressed(self):
         if self.transport_server is test_server.LocalURLServer:
             self.transport_server = None
-        self.vfs_transport_factory = test_server.MemoryServer
+        self.vfs_transport_factory = memory.MemoryServer
         repo = self.make_repository('repo')
         token = repo.lock_write()
         self.addCleanup(repo.unlock)
