@@ -74,33 +74,6 @@ class LocalURLServer(TestServer):
         return urlutils.local_path_to_url('')
 
 
-class MemoryServer(TestServer):
-    """Server for the MemoryTransport for testing with."""
-
-    def start_server(self):
-        self._dirs = {'/':None}
-        self._files = {}
-        self._locks = {}
-        self._scheme = "memory+%s:///" % id(self)
-        def memory_factory(url):
-            from bzrlib.transport import memory
-            result = memory.MemoryTransport(url)
-            result._dirs = self._dirs
-            result._files = self._files
-            result._locks = self._locks
-            return result
-        self._memory_factory = memory_factory
-        transport.register_transport(self._scheme, self._memory_factory)
-
-    def stop_server(self):
-        # unregister this server
-        transport.unregister_transport(self._scheme, self._memory_factory)
-
-    def get_url(self):
-        """See bzrlib.transport.Server.get_url."""
-        return self._scheme
-
-
 class DecoratorServer(TestServer):
     """Server for the TransportDecorator for testing with.
 
